Remote URI can be a file: URI.