@@ -1,8 +1,8 @@
 package com.vaguehope.morrigan.server.model;
 
 import java.io.File;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
@@ -21,7 +21,7 @@ public final class RemoteMixedMediaDbHelper {
 
 //	- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 
-	public static String getFullPathToMmdb (String fileName) {
+	public static String getFullPathToMmdb (final String fileName) {
 		File dir = Config.getMmdbDir();
 		String file = dir.getPath() + File.separator + fileName;
 
@@ -32,16 +32,16 @@ public final class RemoteMixedMediaDbHelper {
 		return file;
 	}
 
-	public static IRemoteMixedMediaDb createRemoteMmdb (String mmdbUrl, String pass) throws MorriganException, MalformedURLException {
-		URL url = new URL(mmdbUrl);
+	public static IRemoteMixedMediaDb createRemoteMmdb (final String mmdbUrl, final String pass) throws MorriganException, URISyntaxException {
+		URI uri = new URI(mmdbUrl);
 		// FIXME better naming?
 		String name = mmdbUrl.substring(mmdbUrl.lastIndexOf("/")+1).replace(Config.MMDB_REMOTE_FILE_EXT, "").replace(Config.MMDB_LOCAL_FILE_EXT, "");
-		String file = getFullPathToMmdb(url.getHost() + "_" + name);
-		RemoteHostDetails details = new RemoteHostDetails(url, pass);
+		String file = getFullPathToMmdb(uri.getHost() + "_" + name);
+		RemoteHostDetails details = new RemoteHostDetails(uri, pass);
 		return RemoteMixedMediaDbFactory.getNew(file, details);
 	}
 
-	public static boolean isRemoteMmdbFile (String filePath) {
+	public static boolean isRemoteMmdbFile (final String filePath) {
 		return (filePath.toLowerCase().endsWith(Config.MMDB_REMOTE_FILE_EXT));
 	}
 
@@ -67,7 +67,7 @@ public final class RemoteMixedMediaDbHelper {
 		return ret;
 	}
 
-	public static String getRemoteMmdbTitle (MediaItemDbConfig config) {
+	public static String getRemoteMmdbTitle (final MediaItemDbConfig config) {
 		String ret = getRemoteMmdbTitle(config.getFilePath());
 
 		if (config.getFilter() != null) {
@@ -77,7 +77,7 @@ public final class RemoteMixedMediaDbHelper {
 		return ret;
 	}
 
-	public static String getRemoteMmdbTitle (String filePath) {
+	public static String getRemoteMmdbTitle (final String filePath) {
 		String ret = filePath;
 		int x;
 
